<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.xiken.projectantivenom.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.xiken.projectantivenom.ui.gallery.GalleryFragment"
        android:label="@string/menu_manual"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.xiken.projectantivenom.ui.support.SupportViewFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.xiken.projectantivenom.ui.tools.ToolsFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.xiken.projectantivenom.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.xiken.projectantivenom.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment android:id="@+id/web"
        android:name="com.xiken.projectantivenom.ui.web.WebV"
        android:label="Plant Detection"
        tools:layout="@layout/web_v"/>
</navigation>